# TaxiVis

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  UPGRADE_PLAN.md  process_taxi_data.sh
doc/: MAP_RESTORATION_PLAN.md  data_import.md
src/TaxiVis/: CMakeLists.txt  CityMap.hpp  HistogramDialog.hpp  QMapTileWidget.cpp  QMapTileWidget.hpp  QMapView.cpp  QMapView.hpp  QMapWidget.cpp  QMapWidget.hpp  RenderingLayer.cpp  RenderingLayer.hpp  TemporalSeriesDialog.hpp  TimeExplorationDialog.hpp  coordinator.cpp  coordinator.h  extendedhistogram.cpp  extendedplotwidget.cpp  geographicalviewwidget.cpp  geographicalviewwidget.h  histogramwidget.cpp  main.cpp  mainwindow.cpp  qcustomplot.h  querymanager.cpp  temporalseriesplotwidget.cpp  timeselectionwidget.cpp  viewwidget.cpp
src/TaxiVis/Resources/shaders/: geo2screen.120.vert  location.120.vert  paths.120.frag  paths.120.geom  paths.120.vert
src/TaxiVis/layers/: GridMap.cpp  GridMap.hpp  HeatMap.cpp  HeatMap.hpp  TripAnimation.cpp  TripAnimation.hpp  TripLocation.cpp  TripLocation.hpp  TripLocationLOD.cpp
src/TaxiVis/util/: colorbar.cpp
src/preprocess/: CMakeLists.txt  csv2Binary.jl  csv2Binary_mt.jl  merge.jl  merge.py
